feat: add fruit on bucket
