# docs/swagger.json
@@ -121,6 +121,53 @@
                     }
                 }
             }
+        },
+        "/v1/fruits/{fruitID}/buckets/{bucketID}": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "fruit"
+                ],
+                "summary": "add fruit on bucket",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Fruit ID",
+                        "name": "fruitID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Bucket ID",
+                        "name": "bucketID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/presenters.ErrorRes"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/presenters.ErrorRes"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
