# internal/controllers/interfaces.go
@@ -18,4 +18,5 @@ type BucketService interface {
 
 type FruitService interface {
 	Create(ctx context.Context, data dtos.CreateFruitDto) (*models.Fruit, error)
+	AddOnBucket(ctx context.Context, fruitID, bucketID int64) error
 }
